--- a/style.css
+++ b/style.css
@@ -2,6 +2,25 @@ header {
 
 }
 
-#body {
-  background-image: url();
+#body img {
+  width: 100%;
+  height: 90%;
+  position: absolute;
+  left: 0px;
+}
+
+footer {
+  color: white;
+  background-color: black;
+  position: fixed;
+  height: 50px;
+  width: 100%;
+  left: 0px;
+  bottom: 0px;
+  text-align: center;
+  padding: 15px;
+}
+
+footer span {
+  padding: 30px;
 }
